--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -12,20 +12,21 @@
     </a>
   </div>
 
-  <div  id="extra">
-    <img alt='' height='147' src='kuvat/kukka.jpg' width='197' />
-
-    <img alt='' height='139' src='kuvat/talo.jpg' width='197' />
+  <div id="extra">
+    <div class="top">
+      <img alt='' height='147' src='kuvat/kukka.jpg' width='197' />
+    </div>
+    <div class="bottom">
+      <img alt='' height='139' src='kuvat/talo.jpg' width='197' />
+    </div>
   </div>
 </div>
 
-<div  id="main_text">
-  <div style='margin-left: 15px;font-family: Georgia,Times New Roman,serif; color: rgb(0, 132, 149); font-weight: bold; font-size: 16px;'>
-    <em>Taianomaista tyylikkyyttä Aasiasta ja luonnonkauniin ympäristön rauhaa. </em>
-  </div>
-  <div style='margin-left: 15px;margin-top: 10px;'>
-    <strong> Villa Taika </strong> on kaunis ja viehättävä Bed&Breakfast -paikka sekä kurssikeskus Antskogissa, 4,5 km Fiskarsista Karjalohjalle päin.
-  </div>
+<div id="main_text">
+    Taianomaista tyylikkyyttä Aasiasta ja luonnonkauniin ympäristön rauhaa. 
+</div>
+<div style='margin-left: 15px;margin-top: 10px;'>
+  <strong> Villa Taika </strong> on kaunis ja viehättävä Bed&Breakfast -paikka sekä kurssikeskus Antskogissa, 4,5 km Fiskarsista Karjalohjalle päin.
 </div>
 
 
