new favi, tweak footer + kartta

--- a/app/views/kartta.html.erb
+++ b/app/views/kartta.html.erb
@@ -1,4 +1,15 @@
-<iframe width="640" height="480" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=fi&amp;geocode=&amp;q=Villa+Taika,+Antskogintie+513,+10480+Antskog,+Finland&amp;mrt=all&amp;sll=60.164123,23.580995&amp;sspn=0.01074,0.038581&amp;ie=UTF8&amp;hq=Villa+Taika,+Antskogintie+513,&amp;hnear=Ansku,+Raasepori,+Suomi&amp;cid=11230810214822612726&amp;ll=60.131248,23.674164&amp;spn=0.164141,0.439453&amp;z=11&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=fi&amp;geocode=&amp;q=Villa+Taika,+Antskogintie+513,+10480+Antskog,+Finland&amp;mrt=all&amp;sll=60.164123,23.580995&amp;sspn=0.01074,0.038581&amp;ie=UTF8&amp;hq=Villa+Taika,+Antskogintie+513,&amp;hnear=Ansku,+Raasepori,+Suomi&amp;cid=11230810214822612726&amp;ll=60.131248,23.674164&amp;spn=0.164141,0.439453&amp;z=11&amp;iwloc=A" style="color:#0000FF;text-align:left">Näytä suurempi kartta</a></small>
-\&nbsp;
-
-<%=t "kartta.yks" %><%=t "kartta.kaks" %><%=t "kartta.kol" %><%=t "kartta.nel" %>
+  <div class="left">
+<iframe width="600" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A" style="color:#0000FF;text-align:left">View Larger Map</a></small>
+</div>
+<div class="right">
+<%=t "kartta.yks" %>
+<br/>
+<br/>
+<%=t "kartta.kaks" %>
+<br/>
+<br/>
+<%=t "kartta.kol" %>
+<br/>
+<br/>
+<%=t "kartta.nel" %>
+</div>
