--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,11 +1,3 @@
-/* @override 
-	http://localhost:3000/stylesheets/style.css?1302007163
-	http://localhost:3000/stylesheets/style.css?1302007778
-	http://localhost:3000/stylesheets/style.css?1302007888
-	http://localhost:3000/stylesheets/style.css?1302008013
-	http://localhost:3000/stylesheets/style.css?1302008260
-	http://localhost:3000/stylesheets/style.css?1302008711
-*/
 
 *
 {
@@ -77,11 +69,26 @@ color: #DADADA;
 
 #slogan
 {
-position: absolute;
-right: 162px;
+position: relative;
 bottom: 0px;
-color: #DADADA;
 font-size: 13px;
+text-align: right;
+	margin-right: 25px;
+}
+
+div.right {
+	position: relative;
+
+float:left;
+width: 200px;
+	font-size: 130%;
+}
+
+div.left {
+	position: relative;
+float:left;
+
+ width: 610px;	
 }
 
 #main
@@ -376,6 +383,11 @@ div#main_text {
 	font-weight: bold; 
 	font-size: 16px;
 	color: rgb(0, 132, 149);
+}
+
+div.kolmas {
+	width: 33%;
+	float: left;
 }
 .top {
 	top: 0;
