fixed menu and things

--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,23 +1,23 @@
 <div id="lotus">
-  <a href='/fi/huone/aurinko.html'>
-   <img alt='Aurinko sviitti' border='0' height='414' src='kuvat/aurinko.jpg' valign='top' width='312' />
+  <a href='/fi/room/aurinko.html'>
+   <img alt='Aurinko sviitti' border='0' height='414' src='/kuvat/aurinko.jpg' valign='top' width='312' />
   </a>
 </div>
 
 <div id="aurinko_wrapper">
   
   <div id="aurinko">
-    <a href='/fi/huone/lootus.html'>
-      <img alt='Lootus sviitti' border='0' height='310' src='kuvat/lootus.jpg' width='246' />
+    <a href='/fi/room/lootus.html'>
+      <img alt='Lootus sviitti' border='0' height='310' src='/kuvat/lootus.jpg' width='246' />
     </a>
   </div>
 
   <div id="extra">
     <div class="top">
-      <img alt='' height='147' src='kuvat/kukka.jpg' width='197' />
+      <img alt='' height='147' src='/kuvat/kukka.jpg' width='197' />
     </div>
     <div class="bottom">
-      <img alt='' height='139' src='kuvat/talo.jpg' width='197' />
+      <img alt='' height='139' src='/kuvat/talo.jpg' width='197' />
     </div>
   </div>
 </div>
