--- a/app/views/kurssi.html.erb
+++ b/app/views/kurssi.html.erb
@@ -1,8 +1,12 @@
-<%=t "kurssi.yks" %>
-<br/>
-<%=t "kurssi.kaks" %>
-<br/>
-<%=t "kurssi.kol" %>
-<br/>
-<%=t "kurssi.nel" %>
-<img src ="/images/sali.gif" width=450px height=336px/>
+<div class="left">
+  <img src ="/images/sali.gif" width=450px height=336px/>
+</div>
+<div class="right">
+  <%=t "kurssi.yks" %>
+  <br/>
+  <%=t "kurssi.kaks" %>
+  <br/>
+  <%=t "kurssi.kol" %>
+  <br/>
+  <%=t "kurssi.nel" %>
+</div>
