small index fix, better room lightbox

--- a/app/views/suites.html.erb
+++ b/app/views/suites.html.erb
@@ -2,7 +2,7 @@
   <div class="box">
     <div class="box_inner">
       <div class="captioned_image">
-        <a href="/images/<%=room%>.jpg" rel="lightbox">
+        <a href="/images/<%=room%>.jpg" rel="lightbox[suites]" title="<%=t(room+".short")%>">
           <img src="/images/<%=room%>_pieni.jpg" >
         </a>
       </div>
