--- a/app/views/deluxe.html.erb
+++ b/app/views/deluxe.html.erb
@@ -1,4 +1,4 @@
-<% ["vihrea" , "oranssi" ].each do |room| %>
+<% ["green" , "orange" ].each do |room| %>
   <div class="box">
     <div class="box_inner">
       <div class="captioned_image">
