--- a/app/views/kurssi.html.erb
+++ b/app/views/kurssi.html.erb
@@ -2,11 +2,11 @@
   <img src ="/images/sali.gif" width=450px height=336px/>
 </div>
 <div class="right">
-  <%=t "kurssi.yks" %>
+  <%=t "groups.one" %>
   <br/>
-  <%=t "kurssi.kaks" %>
+  <%=t "groups.two" %>
   <br/>
-  <%=t "kurssi.kol" %>
+  <%=t "groups.three" %>
   <br/>
-  <%=t "kurssi.nel" %>
+  <%=t "groups.four" %>
 </div>
