--- a/app/views/rooms.html.erb
+++ b/app/views/rooms.html.erb
@@ -1,7 +1,7 @@
 <div class="room_header">
   <%=raw t "#{@room}.full"%>
   <br/>
-  <%= raw t "#{@room}.hinta" %>
+  <%= raw t "#{@room}.price" %>
   <br/>
 </div>
 <div class="centre">
