--- a/app/views/standard.html.erb
+++ b/app/views/standard.html.erb
@@ -1,8 +1,8 @@
-<% ["lootus" , "sun" , "ametist"].each do |room| %>
+<% ["rose","sky"].each do |room| %>
   <div class="box">
     <div class="box_inner">
       <div class="captioned_image">
-        <a href="/images/<%=room%>.jpg" rel="lightbox[suites]" title="<%=t(room+".short")%>">
+        <a href="/images/<%=room%>.jpg" rel="lightbox[standard]" title="<%=t(room+".short")%>">
           <img src="/images/<%=room%>_pieni.jpg" >
         </a>
       </div>
