--- a/app/views/kartta.html.erb
+++ b/app/views/kartta.html.erb
@@ -2,14 +2,14 @@
 <iframe width="600" height="500" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="http://maps.google.com/maps?f=q&amp;source=s_q&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A&amp;output=embed"></iframe><br /><small><a href="http://maps.google.com/maps?f=q&amp;source=embed&amp;hl=en&amp;geocode=&amp;q=villa+taika&amp;aq=&amp;sll=60.166365,23.585501&amp;sspn=0.021649,0.077162&amp;ie=UTF8&amp;hq=villa+taika&amp;hnear=&amp;cid=11230810214822612726&amp;ll=60.149366,23.563614&amp;spn=0.170886,0.411301&amp;z=11&amp;iwloc=A" style="color:#0000FF;text-align:left">View Larger Map</a></small>
 </div>
 <div class="right">
-<%=t "kartta.yks" %>
+<%=raw t "map.one" %>
 <br/>
 <br/>
-<%=t "kartta.kaks" %>
+<%=raw t "map.two" %>
 <br/>
 <br/>
-<%=t "kartta.kol" %>
+<%=raw t "map.three" %>
 <br/>
 <br/>
-<%=t "kartta.nel" %>
+<%=raw t "map.four" %>
 </div>
