--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -31,8 +31,8 @@
     <div id="menu">
       <ul>
         <li><%= link_to  t('bed.short') , "/#{@locale}/bed.html" %><span>&nbsp;</span></li>
-        <li><%= link_to  t('kurssi.short') , "/#{@locale}/kurssi.html" %><span></span></li>
-        <li><%= link_to  t('kartta.short') , "/#{@locale}/kartta.html" %><span></span></li>
+        <li><%= link_to  t('groups.short') , "/#{@locale}/groups.html" %><span></span></li>
+        <li><%= link_to  t('map.short') , "/#{@locale}/map.html" %><span></span></li>
 <!--        <li><a href="#">kuvagalleria<span></span></a></li>
         <li><a href="#">Aktivities<span></span></a></li>
     -->  </ul>
