--- a/app/views/news.html.erb
+++ b/app/views/news.html.erb
@@ -11,9 +11,9 @@
 <div class="box">
   <div class="box_inner">
     <div class="captioned_image">
-      <img src="/images/aurinko_pieni.jpg" height=200>
+      <img src="/images/sun_pieni.jpg" height=200>
       </div>
-      <h2> <%= t("aurinko.short")%> </h2>
-    <%=raw t("aurinko.full")%>
+      <h2> <%= t("sun.short")%> </h2>
+    <%=raw t("sun.full")%>
   </div>
 </div>
