still translation fixes

--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,6 +1,6 @@
 <div id="lotus">
   <a href='/<%=@locale%>/room/sun.html'>
-   <img alt='Aurinko sviitti' border='0' height='414' src='/kuvat/sun.jpg' valign='top' width='312' />
+   <img alt='Aurinko sviitti' border='0' height='414' src='/kuvat/aurinko.jpg' valign='top' width='312' />
   </a>
 </div>
 
