--- a/app/views/bed.html.erb
+++ b/app/views/bed.html.erb
@@ -2,7 +2,7 @@
   <%  ["lootus" , "sun" , "ametist"].each do |room| %>
   <div class="small_box">
     <%= link_to t(room + ".short") , "/#{@locale}/room/#{room}.html" %>
-      <img src="/images/<%=room%>_pieni.jpg"  
+      <img src="/images/<%=room%>_small.jpg"  
           alt=<%=t(room+'.short')%>  
           height=187px  width=250px />
     <br/>
@@ -12,7 +12,7 @@
 <% ["green", "orange" ,"sky" , "rose" ].each do |room| %>
   <div class="small_box2">
     <%= link_to t(room + ".short") , "/#{@locale}/room/#{room}.html" %>
-      <img src="/images/<%=room%>_pieni.jpg"  
+      <img src="/images/<%=room%>_small.jpg"  
           alt=<%=t(room+'.short')%>  
           height=135px  width=180px />
     <br/>
