--- a/app/views/news.html.erb
+++ b/app/views/news.html.erb
@@ -1,7 +1,7 @@
 <div class="box">
   <div class="box_inner">
     <div class="captioned_image">
-      <img src="/images/lootus_pieni.jpg" height=200>
+      <img src="/images/lootus_small.jpg" height=200>
     </div>
     <h2> <%= t("lootus.short")%> </h2>
     <%=raw t("lootus.full")%>
@@ -11,7 +11,7 @@
 <div class="box">
   <div class="box_inner">
     <div class="captioned_image">
-      <img src="/images/sun_pieni.jpg" height=200>
+      <img src="/images/sun_small.jpg" height=200>
       </div>
       <h2> <%= t("sun.short")%> </h2>
     <%=raw t("sun.full")%>
