--- a/app/views/news.html.erb
+++ b/app/views/news.html.erb
@@ -1,19 +1,12 @@
-<div class="box">
+<div class="news_box">
   <div class="box_inner">
     <div class="captioned_image">
-      <img src="/images/lootus_small.jpg" height=200>
+      <a href="/images/lootus.jpg" rel="lightbox" title="Just an example">
+        <img src="/images/lootus_small.jpg" height=100>
+        </a>
     </div>
-    <h2> <%= t("lootus.short")%> </h2>
-    <%=raw t("lootus.full")%>
+    <h2> <%= t("04_2011.short")%> </h2>
+    <%=raw t("04_2011.rest")%>
   </div>
 </div>
 
-<div class="box">
-  <div class="box_inner">
-    <div class="captioned_image">
-      <img src="/images/sun_small.jpg" height=200>
-      </div>
-      <h2> <%= t("sun.short")%> </h2>
-    <%=raw t("sun.full")%>
-  </div>
-</div>
