--- a/app/views/groups.html.erb
+++ b/app/views/groups.html.erb
@@ -2,11 +2,11 @@
   <img src ="/images/sali.gif" width=450px height=336px/>
 </div>
 <div class="right">
-  <%=t "groups.one" %>
+  <%=raw t "groups.one" %>
   <br/>
-  <%=t "groups.two" %>
+  <%=raw t "groups.two" %>
   <br/>
-  <%=t "groups.three" %>
+  <%=raw t "groups.three" %>
   <br/>
-  <%=t "groups.four" %>
+  <%=raw t "groups.four" %>
 </div>
