--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -74,10 +74,14 @@ color: #DADADA;
 #slogan
 {
 position: relative;
-bottom: 0px;
+bottom: 7px;
 font-size: 13px;
+color: rgb(0, 132, 149);
 text-align: right;
-	margin-right: 25px;
+	margin-right: 30px;
+	font-style: italic;
+	letter-spacing: px;
+
 }
 
 div.right {
@@ -137,7 +141,6 @@ font-size: 13px;
 {
 position: absolute;
 right: 0px;
-background: url('/images/x1.gif') no-repeat; 
 }
 
 #menu a:hover span
@@ -148,7 +151,6 @@ margin-top: 5px;
 margin-right: 15px;
 width: 7px;
 height: 7px;
-background: url('/images/x2.gif') no-repeat;
 }
 
 #menu a:hover
@@ -300,10 +302,10 @@ font-size: 14px;
 position: relative;
 top: -5px;
 }
+
 .news_box
 {
 position: relative;
-border: dashed 1px #dadada;
 background: inherit;
 color: #AAB162;
 height: 120px;
@@ -312,34 +314,26 @@ height: 120px;
 .box
 {
 position: relative;
-border: dashed 1px #dadada;
-background: inherit;
-color: #AAB162;
+border-bottom: solid 1px #c0dce0;
 height: 180px;
 }
 
 .box h2
 {
-background: inherit;
-color: #6C7425;
+color: rgb(0, 132, 149);
 font-weight: normal;
-font-size: 18px;
+font-size: 20px;
 margin-bottom: 5px;
-}
-
-.box p
-{
-font-size: 13px;
-line-height: 16px;
-margin: 0px;
 }
 
 .box_inner
 {
 border: solid 1px #fff;
 padding: 15px;
-background: #FFFFE9 url('/images/a4.gif') repeat-x;
 color: inherit;
+font-size: 13px;
+line-height: 1.4em;
+
 }
 
 .captioned_image
@@ -440,7 +434,7 @@ img {
 #footer
 {
 clear: both;
-background: url('/images/a2.gif') repeat-x;
+background: url('/images/a3.gif') repeat-x;
 width: 1080px;
 margin: 0px auto;
 margin-bottom: 25px;
