--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -20,14 +20,15 @@
       <img alt='' height='139' src='/kuvat/talo.jpg' width='197' />
     </div>
   </div>
-</div>
 
-<div id="main_text">
-  <%= t("index.bold")%>
-</div>
-<div style='margin-left: 15px;margin-top: 10px;'>
-  <strong> Villa Taika </strong> 
-  <%= t("index.text")%>
+  <div id="main_text">
+    <%= t("index.bold")%>
+
+  </div>
+  <div class="sub_text">
+    <strong> Villa Taika </strong> 
+    <%= t("index.text")%>
+  </div>
 </div>
 
 
