--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,3 +1,4 @@
+
 *
 {
 margin: 0px;
@@ -360,12 +361,12 @@ div#lotus {
 	height: 450px;
 	width: 330px;
 	float: left;
+	position: relative;
 }
 
 div#aurinko {
 	width: 265px;
 	float: left;
-	margin-left: 20px;
 	position: relative;
 }
 
@@ -374,12 +375,15 @@ div#aurinko {
 	height: 330px;
 	bottom: 0;
 	float: left;	
-	margin-left: 20px;
+	margin-left: 0px;
+	padding-right: 10px;
 	position: relative;
 }
 
 div#aurinko_wrapper {
 	height: 330px;
+	width: 500px;
+	margin-left:30px;
 	float: left;
 	position: relative;
 }
@@ -390,20 +394,21 @@ div#aurinko_wrapper {
 }
 
 div#main_text {
-	margin-left: 20px;
 	font-weight: bold; 
 	font-size: 16px;
 	color: rgb(0, 132, 149);
-  width: 100%;
+  	width: 510px;
 	position: relative;
+	float:  left;
 }
 
 .sub_text {
   width:510px;
   height: 40px;
   margin-top: 10px;
-  margin-left: 20px;
   font-size: 13px;
+  position: relative;
+  float:  left;
 }
 
 div.kolmas {
