adds photo album

--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -86,7 +86,7 @@
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
     <br>
-    www.villataika.fi&nbsp;&nbsp;&nbsp;info(at)villataika.fi
+    www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
@@ -99,6 +99,21 @@
     </a>
   </div>
 </div>
+<div class="divider"></div>
+<br/>
+<br/>
+<br/>
+<script type='text/javascript'>
+var gaJsHost = (("https:" == document.location.protocol) ? "https://ssl." : "http://www.");
+document.write(unescape("%3Cscript src='" + gaJsHost + "google-analytics.com/ga.js' type='text/javascript'%3E%3C/script%3E"));
+
+</script>
+<script type='text/javascript'>
+try {
+var pageTracker = _gat._getTracker("UA-12603339-2");
+pageTracker._trackPageview();
+} catch(err) {}
+</script>
 
 </body>
 </html>
