--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -35,6 +35,7 @@
         <li><%= link_to  t('groups.short') , "/#{@locale}/groups.html" %><span></span></li>
         <li><%= link_to  t('map.short') , "/#{@locale}/map.html" %><span></span></li>
         <li><%= link_to  t('photos.short') , "/#{@locale}/photos.html" %><span></span></li>
+        <li><%= link_to  t('activities.short') , "/#{@locale}/activities.html" %><span></span></li>
 <!--        <li><a href="#">kuvagalleria<span></span></a></li>
         <li><a href="#">Aktivities<span></span></a></li>
     -->  </ul>
