--- a/app/views/news.html.erb
+++ b/app/views/news.html.erb
@@ -9,4 +9,15 @@
     <%=raw t("04_2011.rest")%>
   </div>
 </div>
+<div class="news_box">
+  <div class="box_inner">
+    <div class="captioned_image">
+      <a href="/images/lootus.jpg" rel="lightbox" title="Just an example">
+        <img src="/images/lootus_small.jpg" height=100>
+        </a>
+    </div>
+    <h2> <%= t("04_2011.short")%> </h2>
+    <%=raw t("04_2011.rest")%>
+  </div>
+</div>
 
