--- a/app/views/photos.html.erb
+++ b/app/views/photos.html.erb
@@ -2,7 +2,7 @@
 <div class="photo_box">
   <div class="eiole">
     <a href="/photos/large/<%=photo%>.jpg" rel="lightbox[photos]" title="<%=photo.humanize%>">
-      <img src="/photos/<%=photo%>.jpg" height=100>
+      <img src="/photos/<%=photo%>.jpg" >
     </a>
     <%=photo.humanize%>
   </div>
