--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,3 @@
-
 *
 {
 margin: 0px;
@@ -81,24 +80,26 @@ color: rgb(0, 132, 149);
 text-align: right;
 	margin-right: 30px;
 	font-style: italic;
-	letter-spacing: px;
-
 }
 
 div.right {
-	position: relative;
-
+position: relative;
 float:left;
-width: 200px;
-	font-size: 130%;
+width: 230px;
+padding-left: 20px;
 }
 
 div.left {
-	position: relative;
+position: relative;
 float:left;
-
- width: 610px;	
 }
+div.left2 {
+position: relative;
+float: right;
+width: 150px;
+padding-left: 10px;
+}
+
 
 #main
 {
@@ -394,7 +395,7 @@ div#aurinko {
 div#aurinko_wrapper {
 	height: 330px;
 	width: 500px;
-	margin-left:30px;
+	margin-left:0px;
 	float: left;
 	position: relative;
 }
@@ -473,7 +474,7 @@ background: url('/images/a3.gif') repeat-x;
 width: 1080px;
 margin: 0px auto;
 margin-bottom: 25px;
-padding-top: 10px;
+padding-top: 18px;
 text-align: center;
-line-height: 24px;
+line-height: 18px;
 }
