--- a/app/views/photos.html.erb
+++ b/app/views/photos.html.erb
@@ -1,10 +1,10 @@
 <% photos.each do |photo| %>
 <div class="photo_box">
   <div class="eiole">
-    <a href="/photos/large/<%=photo%>.jpg" rel="lightbox[photos]" title="<%=photo.humanize%>">
+    <a href="/photos/large/<%=photo%>.jpg" rel="lightbox[photos]" title="<%=t "."+photo%>">
       <img src="/photos/<%=photo%>.jpg" width="250" >
     </a>
-    <%=photo.humanize%>
+    <%=t "."+photo%>
   </div>
 </div>
 <%end%>
