found group picture

--- a/app/views/groups.html.erb
+++ b/app/views/groups.html.erb
@@ -2,9 +2,9 @@
   <img src ="/images/sali.gif" width=450px height=336px/>
 </div>
 <div class="left2">
-  <img src ="/images/sammakot.jpg">
   <img src ="/images/allas.jpg">
-  <img src ="/images/pioni.jpg">
+  <img src ="/images/spacer.jpg" height="1px" width="140px">
+  <img src ="/images/garden_group.jpg" height="196" width="140px">
 </div>
 <div class="right">
   <%=raw t "groups.one" %>
