--- a/app/views/groups.html.erb
+++ b/app/views/groups.html.erb
@@ -3,7 +3,7 @@
 </div>
 <div class="left2">
   <img src ="/images/allas.jpg">
-  <img src ="/images/spacer.jpg" height="1px" width="140px">
+  <img src ="/images/blank.gif" height="1px" width="140px">
   <img src ="/images/garden_group.jpg" height="196" width="140px">
 </div>
 <div class="right">
