--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -121,18 +121,24 @@ margin: 0px;
 background: none;
 padding: 0px;
 font-weight: bold;
+width: 165px;
+height: 38px;
+background: inherit;
+background-image: url('/images/bbg0.gif');
+}
+
+
+#menu ul li.active {
+  background-image: url('/images/bbg2.gif');
+  background-color: rgb(0, 132, 149)
 }
 
 #menu a
 {
 display: block;
 position: relative;
-width: 148px;
-height: 27px;
 margin-bottom: 1px;
 text-decoration: none;
-background: inherit;
-background-image: url('/images/bbg0.gif');
 padding-left: 17px;
 padding-top: 11px;
 color: #636363;
@@ -155,7 +161,7 @@ width: 7px;
 height: 7px;
 }
 
-#menu a:hover
+#menu li:hover
 {
 background: inherit;
 color: #fff;
