--- a/app/views/groups.html.erb
+++ b/app/views/groups.html.erb
@@ -7,11 +7,11 @@
   <img src ="/images/garden_group.jpg" height="196" width="140px">
 </div>
 <div class="right">
-  <%=raw t "groups.one" %>
-  <br/>  <br/>
-  <%=raw t "groups.two" %>
-  <br/>  <br/>
-  <%=raw t "groups.three" %>
-  <br/>  <br/>
-  <%=raw t "groups.four" %>
+  <%=raw t "groups.right" %>
 </div>
+<div class="divider"> </div>
+<div class="left">
+  <br>
+  <%=raw t "groups.bottom" %>
+</div>
+
