menu-and-images

--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,6 +1,6 @@
 <div id="lotus">
   <a href='/<%=@locale%>/room/sun.html'>
-   <img alt='Aurinko sviitti' border='0' height='414' src='/kuvat/aurinko.jpg' valign='top' width='312' />
+   <img alt='Aurinko sviitti' border='0' height='414' src='/images/aurinko.jpg' valign='top' width='312' />
   </a>
 </div>
 
@@ -8,16 +8,16 @@
   
   <div id="aurinko">
     <a href='/<%=@locale%>/room/lootus.html'>
-      <img alt='Lootus sviitti' border='0' height='310' src='/kuvat/lootus.jpg' width='246' />
+      <img alt='Lootus sviitti' border='0' height='310' src='/images/lootus_1.jpg' width='246' />
     </a>
   </div>
 
   <div id="extra">
     <div class="top">
-      <img alt='' height='147' src='/kuvat/kukka.jpg' width='197' />
+      <img alt='' height='147' src='/images/kukka.jpg' width='197' />
     </div>
     <div class="bottom">
-      <img alt='' height='139' src='/kuvat/talo.jpg' width='197' />
+      <img alt='' height='139' src='/images/talo.jpg' width='197' />
     </div>
   </div>
 
