--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -22,7 +22,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="/kuvat/logo_iso.png">
+      <img src="/images/logo_iso.png">
       </div>
       <div id="slogan"><%=t("slogan")%></div>
   </div>
@@ -91,7 +91,7 @@
   </div>
   <div class="kolmas">
     <a href="/<%=@locale%>/index.html">
-    <img alt="" src="/kuvat/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="/images/logo_pien.gif" border="0" height="33" width="198">
     </a>
   </div>
 </div>
