--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -130,7 +130,6 @@ background-image: url('/images/bbg0.gif');
 
 #menu ul li.active {
   background-image: url('/images/bbg2.gif');
-  background-color: rgb(0, 132, 149)
 }
 
 #menu a
@@ -139,7 +138,7 @@ display: block;
 position: relative;
 margin-bottom: 1px;
 text-decoration: none;
-padding-left: 17px;
+padding-left: 25px;
 padding-top: 11px;
 color: #636363;
 font-size: 13px;
@@ -163,8 +162,6 @@ height: 7px;
 
 #menu li:hover
 {
-background: inherit;
-color: #fff;
 background-image: url('/images/bbg1.gif');
 }
 
@@ -241,13 +238,13 @@ list-style: none;
 
 li
 {
-background: url('/kuvat/li.gif') no-repeat;
+background: url('/images/li.gif') no-repeat;
 padding-left: 18px;
 }
 
 li:hover 
 {
-background: url('/kuvat/li_high.gif') no-repeat;
+background: url('/images/li_high.gif') no-repeat;
 }
 
 p
