--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -1,4 +1,3 @@
-/* @override http://localhost:3000/stylesheets/style.css?1303373019 */
 
 *
 {
@@ -382,7 +381,22 @@ bottom: 0px;
 left: 0px;
 }
 
-.photo_box{
+.photo_box_w{
+  border: solid 1px #fff;
+  padding: 5px;
+  padding-bottom: 10px;
+  margin-right: 12px;
+  margin-left: 12px;
+  color: inherit;
+  font-size: 13px;
+  line-height: 1.4em;
+  width: 232px;
+  height: 170px;
+  float: left;
+	text-align: center;
+}
+
+.photo_box_h{
   border: solid 1px #fff;
   padding: 5px;
   margin-right: 12px;
@@ -390,9 +404,10 @@ left: 0px;
   color: inherit;
   font-size: 13px;
   line-height: 1.4em;
-  width: 250px;
-  height: 170px;
+  height: 230px;
+  width: 170px;
   float: left;
+  text-align: center;
 }
 
 div.centre {
