--- a/app/views/index.html.erb
+++ b/app/views/index.html.erb
@@ -1,5 +1,5 @@
 <div id="lotus">
-  <a href='/<%=@locale%>/room/sun.html'>
+  <a href='/<%=@locale%>/suites.html'>
    <img alt='Aurinko sviitti' border='0' height='414' src='/images/aurinko.jpg' valign='top' width='312' />
   </a>
 </div>
@@ -7,7 +7,7 @@
 <div id="aurinko_wrapper">
   
   <div id="aurinko">
-    <a href='/<%=@locale%>/room/lootus.html'>
+    <a href='/<%=@locale%>/suites.html'>
       <img alt='Lootus sviitti' border='0' height='310' src='/images/lootus_1.jpg' width='246' />
     </a>
   </div>
