--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,17 +1,22 @@
 <!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Strict//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-strict.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 <head>
-  <%= stylesheet_link_tag :all %>
-  <%= javascript_include_tag :defaults %>
-  <%= csrf_meta_tag %>
-  <%= favicon_link_tag %>
-  <script type="text/javascript" src="/javascripts/prototype.js"></script>
-  <script type="text/javascript" src="/javascripts/scriptaculous.js?load=effects,builder"></script>
-  <script type="text/javascript" src="/javascripts/lightbox.js"></script>
-  <link rel="stylesheet" href="/stylesheets/lightbox.css" type="text/css" media="screen" />
+  <link href="/stylesheets/lightbox.css" media="screen" rel="stylesheet" type="text/css" /> 
+  <link href="/stylesheets/style.css" media="screen" rel="stylesheet" type="text/css" /> 
+  <script src="/javascripts/prototype.js" type="text/javascript"></script> 
+  <script src="/javascripts/effects.js" type="text/javascript"></script> 
+  <script src="/javascripts/dragdrop.js" type="text/javascript"></script> 
+  <script src="/javascripts/controls.js" type="text/javascript"></script> 
+  <script src="/javascripts/rails.js" type="text/javascript"></script> 
+  <script src="/javascripts/application.js" type="text/javascript"></script> 
+  <script src="/javascripts/prototype.js" type="text/javascript"></script> 
+  <script src="/javascripts/scriptaculous.js?load=effects,builder" type="text/javascript"></script> 
+  <script src="/javascripts/lightbox.js" type="text/javascript"></script> 
+
+  <link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
   <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika :<%=t('slogan') + ' ' + t(@page + ".short") %>" />
+  <meta name="description" content="Bed & Breakfast Villa Taika : <%=t('slogan') + ' ' + t(@page + ".short") %>" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="<%=@locale%>"/>  
   <title>Bed & Breakfast Villa Taika : <%= t(@page + ".short") %></title>
@@ -52,7 +57,7 @@
 
       <div class="divider"></div>
     
-      <%["fi" , "en" , "se" , "de"].each do |lang| %>
+      <%["fi" , "en" ].each do |lang| %>
         <a href="<%="/#{lang}#{this_page}"%>" <%="class='selected'" if lang == @locale%>>  
           <img src="/images/<%=lang.to_s%>.gif"/> </a>
       <%end%>
@@ -62,7 +67,7 @@
       </h3>
       <div id="news"> 
         <a href="/<%=@locale%>/news.html"> 
-          <%= t(t("last")+".short")%> 
+          <%= t("news." + news.first + ".short")%> 
         </a>
       </div>
       <div class="divider"></div>
