--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -11,11 +11,11 @@
 
   <link href="/favicon.ico" rel="shortcut icon" type="image/vnd.microsoft.icon" /> 
   
-  <meta name="keywords" content="Bed&breakfast majoitus hotel Fiskars häät  Suite" />
-  <meta name="description" content="Bed & Breakfast Villa Taika : <%=t('slogan') + ' ' + t(@page + ".short") %>" />
+  <meta name="keywords" content="Bed and breakfast majoitus hotel Fiskars häät  Suite" />
+  <meta name="description" content="Bed and Breakfast Villa Taika : <%=t('slogan') + ' ' + t(@page + ".short") %>" />
   <meta http-equiv="content-type" content="text/html; charset=utf-8" />
   <meta http-equiv="Content-Language" content="<%=@locale%>"/>  
-  <title>Bed & Breakfast Villa Taika : <%= t(@page + ".short") %></title>
+  <title>Bed &amp; Breakfast Villa Taika : <%= t(@page + ".short") %></title>
   
 </head>
 
@@ -25,7 +25,7 @@
 
   <div id="header">
       <div class="centre">
-      <img src="/images/logo_iso.png">
+      <img src="/images/logo_iso.png" alt="Villa Taika logo"/>
       </div>
       <div id="slogan"><%=t("slogan")%></div>
   </div>
@@ -55,7 +55,7 @@
     
       <%["fi" , "en" ].each do |lang| %>
         <a href="<%="/#{lang}#{this_page}"%>" <%="class='selected'" if lang == @locale%>>  
-          <img src="/images/<%=lang.to_s%>.gif"/> </a>
+          <img src="/images/<%=lang.to_s%>.gif" alt="<%=lang.to_s%>"/> </a>
       <%end%>
 
       <h3>
@@ -84,17 +84,17 @@
 <div id="footer">
   <div class="kolmas">
     <b>Villa Taika</b>, Fiskarsintie 513, Antskog
-    <br>
+    <br/>
     www.villataika.fi&nbsp;&nbsp;&nbsp;info@villataika.fi
   </div>
   <div class="kolmas">
     Raisa Kaipainen &amp; Torsten Rüger
-    <br>
+    <br/>
     puh 040 704 6689
   </div>
   <div class="kolmas">
     <a href="/<%=@locale%>/index.html">
-    <img alt="" src="/images/logo_pien.gif" border="0" height="33" width="198">
+    <img alt="" src="/images/logo_pien.gif" border="0" height="33" width="198"/>
     </a>
   </div>
 </div>
